add default extensions for vscode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,39 @@
 	// NOTE: 動作安定しないのでシェルスクリプトを手動で実行するように変更
 	//     : 具体的には,gitconfigの項目がsigningkeyのみになる(厳密にはcredential.helperというのがdevcontainerの自動生成で追加される)
 	// "postCreateCommand": "git config --global user.signingkey /home/vscode/.ssh/gh_wsl_commit.pub",
-	"postCreateCommand": "chmod 755 ./set_cfg_signing_key.sh"
+	"postCreateCommand": "chmod 755 ./set_cfg_signing_key.sh",
+
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				// rust
+				"fill-labs.dependi",
+				"treetsidesoftware.code-spell-checker",
+
+				// markdown
+				"davidanson.vscode-markdownlint",
+				// "corschenzi.mermaid-graphical-editor",
+				// "bierner.markdown-mermaid",
+				// "shd101wyy.markdown-preview-enhanced",
+				// "yzane.markdown-pdf",
+				// "yzhang.markdown-all-in-one",
+
+				// other
+				"ms-azuretools.vscode-docker",
+				"mosapride.zenkaku",
+				"redhat.vscode-yaml",
+				"shardulm94.trailing-spaces",
+				"gruntfuggly.todo-tree",
+				"mtxr.sqltools",
+				"esbenp.prettier-vscode",
+				"asuka.insertnumbers",
+				"github.vscode-github-actions",
+				"donjayamanne.githistory",
+				"mhutchie.git-graph",
+				"wmaurer.change-case"
+			]
+		}
+	}
 
 	// Configure tool-specific properties.
 
