fix spelling typo

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,7 +45,7 @@
                 // "yzane.markdown-pdf",
                 // "yzhang.markdown-all-in-one",
 
-                // other
+                // others
                 "ms-azuretools.vscode-docker",
                 "mosapride.zenkaku",
                 "redhat.vscode-yaml",
