--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,8 @@
                 "github.vscode-github-actions",
                 "donjayamanne.githistory",
                 "mhutchie.git-graph",
-                "wmaurer.change-case"
+                "wmaurer.change-case",
+                "streetsidesoftware.code-spell-checker"
             ]
         }
     }
